# PgeGameSave

./: CMakeLists.txt  README.md  pge_gamesave.cmake  pge_gamesave.pri
cmake/: DownloadSQLite.cmake
src/: CMakeLists.txt  pge_gamesave_db.cpp  pge_gamesave_db.h
test/: CMakeLists.txt  gamesave_test.cpp  gamesave_test.pro
